# c-lightning-uptream

./: CHANGELOG.md  Cargo.toml  Dockerfile  fetch-bitcoin.sh
.github/workflows/: crate-bump.yml  on-push.yml  on-tag.yml
cln-grpc/: Cargo.toml
cln-rpc/: Cargo.toml
contrib/pyln-client/pyln/client/: lightning.py
contrib/pyln-proto/pyln/proto/: onion.py  primitives.py  wire.py
contrib/pyln-proto/tests/: test_onion.py
plugins/: Cargo.toml
